--- a/dependencies/ironsource/build.gradle
+++ b/dependencies/ironsource/build.gradle
@@ -24,14 +24,14 @@ dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	compile project(':deps:extension-api')
 
-	implementation 'com.ironsource.sdk:mediationsdk:7.0.0'
+	implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.ironsourceMediationSdk}"
 
-	implementation 'com.google.android.gms:play-services-ads:19.3.0'
+	implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.playServicesGamesVersion}"
 	implementation 'com.google.android.gms:play-services-ads-identifier:17.0.0'
 	implementation 'com.google.android.gms:play-services-basement:17.1.1'
-
-	implementation 'com.facebook.android:audience-network-sdk:5.11.0'
+	
+	implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.fbAdsSdk}"
 	implementation 'com.applovin:applovin-sdk:9.13.4'
-	implementation 'com.unity3d.ads:unity-ads:3.4.8'
+	implementation "com.crashlytics.sdk.android:crashlytics:${rootProject.ext.unityAds}"
 	implementation 'com.vungle:publisher-sdk-android:6.7.0'
 }
