--- a/dependencies/ironsource/build.gradle
+++ b/dependencies/ironsource/build.gradle
@@ -26,7 +26,7 @@ dependencies {
 
 	implementation "com.ironsource.sdk:mediationsdk:${rootProject.ext.ironsourceMediationSdk}"
 
-	implementation "com.google.android.gms:play-services-ads:${rootProject.ext.playServicesGamesVersion}"
+	implementation "com.google.android.gms:play-services-ads:${rootProject.ext.playServicesAds}"
 	implementation "com.google.android.gms:play-services-ads-identifier:${rootProject.ext.playServicesGamesIdentifier}"
 	implementation "com.google.android.gms:play-services-basement:${rootProject.ext.playServicesGamesBasement}"
 	
