--- a/dependencies/ironsource/AndroidManifest.xml
+++ b/dependencies/ironsource/AndroidManifest.xml
@@ -12,7 +12,7 @@
 	<application
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="true"
-        tools:node="replace"  >
+        tools:node="merge"  >
     
         <activity
             android:name="com.ironsource.sdk.controller.ControllerActivity"
