--- a/dependencies/ironsource/AndroidManifest.xml
+++ b/dependencies/ironsource/AndroidManifest.xml
@@ -1,112 +1,98 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ironsource"
-    xmlns:tools="http://schemas.android.com/tools" >
-
+	package="com.ironsource"
+	xmlns:tools="http://schemas.android.com/tools" >
 
 	<uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+	<uses-permission android:name="android.permission.VIBRATE" />
 
 	<application
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
-        tools:node="merge"  >
-    
-        <activity
-            android:name="com.ironsource.sdk.controller.ControllerActivity"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="true" />
-        <activity
-            android:name="com.ironsource.sdk.controller.InterstitialActivity"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.Translucent" />
-        <activity
-            android:name="com.ironsource.sdk.controller.OpenUrlActivity"
-            android:configChanges="orientation|screenSize"
-            android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.Translucent" />
+		android:networkSecurityConfig="@xml/network_security_config"
+		android:usesCleartextTraffic="true"
+		android:allowBackup="true"
+		android:label="::APP_TITLE::"
+		tools:replace="android:label"
+		>
+	
+		<activity
+			android:name="com.ironsource.sdk.controller.ControllerActivity"
+			android:configChanges="orientation|screenSize"
+			android:hardwareAccelerated="true" />
+		
+		<activity
+			android:name="com.ironsource.sdk.controller.OpenUrlActivity"
+			android:configChanges="orientation|screenSize"
+			android:hardwareAccelerated="true"
+			android:theme="@android:style/Theme.Translucent" />
 
-        <meta-data android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+		<meta-data android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
 
-        <activity
-            android:name="com.adcolony.sdk.AdColonyInterstitialActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:hardwareAccelerated="true" />
+		<activity android:name="com.adcolony.sdk.AdColonyAdViewActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:hardwareAccelerated="true"/>
 
-        <activity android:name="com.adcolony.sdk.AdColonyAdViewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:hardwareAccelerated="true"/>
+		<activity android:name="com.google.android.gms.ads.AdActivity"
+			android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
 
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
+		<activity
+			android:name="com.applovin.adview.AppLovinFullscreenActivity"
+			android:configChanges="keyboard|keyboardHidden|locale|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
+			android:exported="false"
+			android:hardwareAccelerated="true"
+			android:launchMode="singleTop"
+			android:screenOrientation="behind"/>
 
-        <activity
-            android:name="com.applovin.adview.AppLovinInterstitialActivity"
-            android:configChanges="orientation|screenSize|smallestScreenSize|screenLayout|uiMode"
-            android:hardwareAccelerated="true"
-            android:screenOrientation="behind"/>
+		<activity
+			android:name="com.applovin.sdk.AppLovinWebViewActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize|uiMode"/>
 
-        <activity
-            android:name="com.applovin.adview.AppLovinFullscreenActivity"
-            android:configChanges="keyboard|keyboardHidden|locale|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
-            android:exported="false"
-            android:hardwareAccelerated="true"
-            android:launchMode="singleTop"
-            android:screenOrientation="behind"/>
+		<activity
+			android:name="com.facebook.ads.AudienceNetworkActivity"
+			android:hardwareAccelerated="true"
+			android:configChanges="keyboardHidden|orientation|screenSize" />
 
-        <activity
-            android:name="com.applovin.sdk.AppLovinWebViewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|uiMode"/>
+		<activity
+			android:name="com.unity3d.services.ads.adunit.AdUnitActivity"
+			android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
+			android:hardwareAccelerated="true"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+		<activity
+			android:name="com.unity3d.services.ads.adunit.AdUnitTransparentActivity"
+			android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
+			android:hardwareAccelerated="true"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+		<activity
+			android:name="com.unity3d.services.ads.adunit.AdUnitTransparentSoftwareActivity"
+			android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
+			android:hardwareAccelerated="false"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
+		<activity
+			android:name="com.unity3d.services.ads.adunit.AdUnitSoftwareActivity"
+			android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
+			android:hardwareAccelerated="false"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
-        <activity
-            android:name="com.facebook.ads.AudienceNetworkActivity"
-            android:hardwareAccelerated="true"
-            android:configChanges="keyboardHidden|orientation|screenSize" />
-
-        <activity
-            android:name="com.unity3d.services.ads.adunit.AdUnitActivity"
-            android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
-            android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-        <activity
-            android:name="com.unity3d.services.ads.adunit.AdUnitTransparentActivity"
-            android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
-            android:hardwareAccelerated="true"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
-        <activity
-            android:name="com.unity3d.services.ads.adunit.AdUnitTransparentSoftwareActivity"
-            android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
-            android:hardwareAccelerated="false"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar.Fullscreen" />
-        <activity
-            android:name="com.unity3d.services.ads.adunit.AdUnitSoftwareActivity"
-            android:configChanges="fontScale|keyboard|keyboardHidden|locale|mnc|mcc|navigation|orientation|screenLayout|screenSize|smallestScreenSize|uiMode|touchscreen"
-            android:hardwareAccelerated="false"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-
-        <activity  
-            android:name="com.vungle.warren.ui.VungleActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-            android:launchMode="singleTop"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
-        <activity
-            android:name="com.vungle.warren.ui.VungleFlexViewActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
-            android:hardwareAccelerated="true"
-            android:launchMode="singleTop"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
-        <receiver
-            android:name="com.vungle.warren.NetworkProviderReceiver"
-            android:enabled="false" >
-            <intent-filter>
-                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
-        </receiver>
+		<activity  
+			android:name="com.vungle.warren.ui.VungleActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+			android:launchMode="singleTop"
+			android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
+		<activity
+			android:name="com.vungle.warren.ui.VungleFlexViewActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize|screenLayout|smallestScreenSize|uiMode"
+			android:hardwareAccelerated="true"
+			android:launchMode="singleTop"
+			android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+		<receiver
+			android:name="com.vungle.warren.NetworkProviderReceiver"
+			android:enabled="false" >
+			<intent-filter>
+				<action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</receiver>
 
 	</application>
 </manifest>
