--- a/dependencies/ironsource/AndroidManifest.xml
+++ b/dependencies/ironsource/AndroidManifest.xml
@@ -14,28 +14,40 @@
 		android:label="::APP_TITLE::"
 		tools:replace="android:label"
 		>
-	
+
+		<meta-data android:name="com.google.android.gms.version"
+			android:value="@integer/google_play_services_version" />
+		<activity android:name="com.google.android.gms.ads.AdActivity"
+			android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
+
+		<activity
+			android:name="com.ironsource.sdk.controller.InterstitialActivity"
+			android:configChanges="orientation|screenSize"
+			android:hardwareAccelerated="true"
+			android:theme="@android:style/Theme.Translucent" />
 		<activity
 			android:name="com.ironsource.sdk.controller.ControllerActivity"
 			android:configChanges="orientation|screenSize"
 			android:hardwareAccelerated="true" />
-		
 		<activity
 			android:name="com.ironsource.sdk.controller.OpenUrlActivity"
 			android:configChanges="orientation|screenSize"
 			android:hardwareAccelerated="true"
 			android:theme="@android:style/Theme.Translucent" />
 
-		<meta-data android:name="com.google.android.gms.version"
-			android:value="@integer/google_play_services_version" />
-
+		<activity
+			android:name="com.adcolony.sdk.AdColonyInterstitialActivity"
+			android:configChanges="keyboardHidden|orientation|screenSize"
+			android:hardwareAccelerated="true" />
 		<activity android:name="com.adcolony.sdk.AdColonyAdViewActivity"
 			android:configChanges="keyboardHidden|orientation|screenSize"
 			android:hardwareAccelerated="true"/>
 
-		<activity android:name="com.google.android.gms.ads.AdActivity"
-			android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" android:theme="@android:style/Theme.Translucent" />
-
+		<activity
+			android:name="com.applovin.adview.AppLovinInterstitialActivity"
+			android:configChanges="orientation|screenSize|smallestScreenSize|screenLayout|uiMode"
+			android:hardwareAccelerated="true"
+			android:screenOrientation="behind"/>
 		<activity
 			android:name="com.applovin.adview.AppLovinFullscreenActivity"
 			android:configChanges="keyboard|keyboardHidden|locale|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
