--- a/dependencies/ironsource/AndroidManifest.xml
+++ b/dependencies/ironsource/AndroidManifest.xml
@@ -11,8 +11,9 @@
 		android:networkSecurityConfig="@xml/network_security_config"
 		android:usesCleartextTraffic="true"
 		android:allowBackup="true"
+		android:fullBackupContent = "true"
 		android:label="::APP_TITLE::"
-		tools:replace="android:label"
+		tools:replace="android:label,android:fullBackupContent"
 		>
 
 		<meta-data android:name="com.google.android.gms.version"
